chore: updated overview page

--- a/adaptive-icons/index.html
+++ b/adaptive-icons/index.html
@@ -32,11 +32,233 @@
 			font-style: normal;
 			font-display: block;
 		}
+
 		@font-face {
 			font-family: 'icon-font';
 			src:
 				url('icon-font/icons-solid.woff2') format('woff2'),
 				url('icon-font/icons-solid.woff') format('woff');
+			font-weight: 700;
+			font-style: normal;
+			font-display: block;
+		}
+
+		/* new icon font */
+		@font-face {
+			font-family: 'icon-font-new-10';
+			src:
+				url('generated-icon-fonts/db-icon-font-10-outline.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-10-outline.woff') format('woff');
+			font-weight: 400;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-10';
+			src:
+				url('generated-icon-fonts/db-icon-font-10-filled.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-10-filled.woff2') format('woff');
+			font-weight: 700;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-12';
+			src:
+				url('generated-icon-fonts/db-icon-font-12-outline.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-12-outline.woff') format('woff');
+			font-weight: 400;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-12';
+			src:
+				url('generated-icon-fonts/db-icon-font-12-filled.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-12-filled.woff2') format('woff');
+			font-weight: 700;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-14';
+			src:
+				url('generated-icon-fonts/db-icon-font-14-outline.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-14-outline.woff') format('woff');
+			font-weight: 400;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-14';
+			src:
+				url('generated-icon-fonts/db-icon-font-14-filled.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-14-filled.woff2') format('woff');
+			font-weight: 700;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-16';
+			src:
+				url('generated-icon-fonts/db-icon-font-16-outline.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-16-outline.woff') format('woff');
+			font-weight: 400;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-16';
+			src:
+				url('generated-icon-fonts/db-icon-font-16-filled.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-16-filled.woff2') format('woff');
+			font-weight: 700;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-20';
+			src:
+				url('generated-icon-fonts/db-icon-font-20-outline.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-20-outline.woff') format('woff');
+			font-weight: 400;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-20';
+			src:
+				url('generated-icon-fonts/db-icon-font-20-filled.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-20-filled.woff2') format('woff');
+			font-weight: 700;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-24';
+			src:
+				url('generated-icon-fonts/db-icon-font-24-outline.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-24-outline.woff') format('woff');
+			font-weight: 400;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-24';
+			src:
+				url('generated-icon-fonts/db-icon-font-24-filled.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-24-filled.woff2') format('woff');
+			font-weight: 700;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-28';
+			src:
+				url('generated-icon-fonts/db-icon-font-28-outline.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-28-outline.woff') format('woff');
+			font-weight: 400;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-28';
+			src:
+				url('generated-icon-fonts/db-icon-font-28-filled.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-28-filled.woff2') format('woff');
+			font-weight: 700;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-32';
+			src:
+				url('generated-icon-fonts/db-icon-font-32-outline.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-32-outline.woff') format('woff');
+			font-weight: 400;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-32';
+			src:
+				url('generated-icon-fonts/db-icon-font-32-filled.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-32-filled.woff2') format('woff');
+			font-weight: 700;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-40';
+			src:
+				url('generated-icon-fonts/db-icon-font-40-outline.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-40-outline.woff') format('woff');
+			font-weight: 400;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-40';
+			src:
+				url('generated-icon-fonts/db-icon-font-40-filled.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-40-filled.woff2') format('woff');
+			font-weight: 700;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-48';
+			src:
+				url('generated-icon-fonts/db-icon-font-48-outline.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-48-outline.woff') format('woff');
+			font-weight: 400;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-48';
+			src:
+				url('generated-icon-fonts/db-icon-font-48-filled.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-48-filled.woff2') format('woff');
+			font-weight: 700;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-64';
+			src:
+				url('generated-icon-fonts/db-icon-font-64-outline.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-64-outline.woff') format('woff');
+			font-weight: 400;
+			font-style: normal;
+			font-display: block;
+		}
+
+		@font-face {
+			font-family: 'icon-font-new-64';
+			src:
+				url('generated-icon-fonts/db-icon-font-64-filled.woff2') format('woff2'),
+				url('generated-icon-fonts/db-icon-font-64-filled.woff2') format('woff');
 			font-weight: 700;
 			font-style: normal;
 			font-display: block;
@@ -73,10 +295,100 @@
 			font-size: calc(var(--icon-height, 24) * 1px);
 			-webkit-text-stroke: var(--icon-stroke-outline);
 		}
+
 		[data-icon-type="solid"]::before {
 			-webkit-text-stroke: var(--icon-stroke-solid);
 			/* Differentiating the icon font referenced by font-weight */
 			font-weight: 700;
+		}
+
+		/* new icon font */
+		[data-icon-new]::before {
+			speak: never;
+			font-style: normal;
+			font-weight: normal;
+			font-variant: normal;
+			text-transform: none;
+			line-height: 1;
+
+			/* Enable Ligatures ================ */
+			letter-spacing: 0;
+			-webkit-font-feature-settings: "liga";
+			-moz-font-feature-settings: "liga=1";
+			-moz-font-feature-settings: "liga";
+			-ms-font-feature-settings: "liga" 1;
+			font-feature-settings: "liga";
+			-webkit-font-variant-ligatures: discretionary-ligatures;
+			font-variant-ligatures: discretionary-ligatures;
+
+			/* Better Font Rendering =========== */
+			-webkit-font-smoothing: antialiased;
+			-moz-osx-font-smoothing: grayscale;
+		}
+
+		[data-icon-new]::before {
+			content: attr(data-icon-new);
+		}
+
+		[data-icon-variant$="-filled"]::before {
+			/* Differentiating the icon font referenced by font-weight */
+			font-weight: 700;
+		}
+
+		/* use !important to prevent issues with browser extensions that change fonts */
+		[data-icon-variant|="10"]::before {
+			font-family: 'icon-font-new-10' !important;
+			font-size: 10px;
+		}
+
+		[data-icon-variant|="12"]::before {
+			font-family: 'icon-font-new-12' !important;
+			font-size: 12px;
+		}
+
+		[data-icon-variant|="14"]::before {
+			font-family: 'icon-font-new-14' !important;
+			font-size: 14px;
+		}
+
+		[data-icon-variant|="16"]::before {
+			font-family: 'icon-font-new-16' !important;
+			font-size: 16px;
+		}
+
+		[data-icon-variant|="20"]::before {
+			font-family: 'icon-font-new-20' !important;
+			font-size: 20px;
+		}
+
+		[data-icon-variant|="24"]::before {
+			font-family: 'icon-font-new-24' !important;
+			font-size: 24px;
+		}
+
+		[data-icon-variant|="28"]::before {
+			font-family: 'icon-font-new-28' !important;
+			font-size: 28px;
+		}
+
+		[data-icon-variant|="32"]::before {
+			font-family: 'icon-font-new-32' !important;
+			font-size: 32px;
+		}
+
+		[data-icon-variant|="40"]::before {
+			font-family: 'icon-font-new-40' !important;
+			font-size: 40px;
+		}
+
+		[data-icon-variant|="48"]::before {
+			font-family: 'icon-font-new-48' !important;
+			font-size: 48px;
+		}
+
+		[data-icon-variant|="64"]::before {
+			font-family: 'icon-font-new-64' !important;
+			font-size: 64px;
 		}
 
 		/* demo styles */
@@ -85,14 +397,18 @@
 			list-style-type: none;
 
 			display: flex;
+
+			align-items: center
 		}
 
 		form {
 			float: right;
 		}
+
 		form output#outline {
 			-webkit-text-stroke: var(--icon-stroke-outline);
 		}
+
 		form output#solid {
 			-webkit-text-stroke: var(--icon-stroke-solid);
 		}
@@ -119,6 +435,86 @@
 			<dd><output for="size" id="solid"></output></dd>
 		</dl>
 	</form>
+	<h2>New icon font with ligatures</h2>
+	<ol>
+		<li data-icon-new="bug" data-icon-variant="10-outline"></li>
+		<li data-icon-new="bug" data-icon-variant="12-outline"></li>
+		<li data-icon-new="bug" data-icon-variant="14-outline"></li>
+		<li data-icon-new="bug" data-icon-variant="16-outline"></li>
+		<li data-icon-new="bug" data-icon-variant="20-outline"></li>
+		<li data-icon-new="bug" data-icon-variant="24-outline"></li>
+		<li data-icon-new="bug" data-icon-variant="28-outline"></li>
+		<li data-icon-new="bug" data-icon-variant="32-outline"></li>
+		<li data-icon-new="bug" data-icon-variant="40-outline"></li>
+		<li data-icon-new="bug" data-icon-variant="48-outline"></li>
+		<li data-icon-new="bug" data-icon-variant="64-outline"></li>
+	</ol>
+
+	<ol>
+		<li data-icon-new="arrow_left" data-icon-variant="10-outline"></li>
+		<li data-icon-new="arrow_left" data-icon-variant="12-outline"></li>
+		<li data-icon-new="arrow_left" data-icon-variant="14-outline"></li>
+		<li data-icon-new="arrow_left" data-icon-variant="16-outline"></li>
+		<li data-icon-new="arrow_left" data-icon-variant="20-outline"></li>
+		<li data-icon-new="arrow_left" data-icon-variant="24-outline"></li>
+		<li data-icon-new="arrow_left" data-icon-variant="28-outline"></li>
+		<li data-icon-new="arrow_left" data-icon-variant="32-outline"></li>
+		<li data-icon-new="arrow_left" data-icon-variant="40-outline"></li>
+		<li data-icon-new="arrow_left" data-icon-variant="48-outline"></li>
+		<li data-icon-new="arrow_left" data-icon-variant="64-outline"></li>
+	</ol>
+	<ol>
+		<li data-icon-new="arrow_right" data-icon-variant="10-outline"></li>
+		<li data-icon-new="arrow_right" data-icon-variant="12-outline"></li>
+		<li data-icon-new="arrow_right" data-icon-variant="14-outline"></li>
+		<li data-icon-new="arrow_right" data-icon-variant="16-outline"></li>
+		<li data-icon-new="arrow_right" data-icon-variant="20-outline"></li>
+		<li data-icon-new="arrow_right" data-icon-variant="24-outline"></li>
+		<li data-icon-new="arrow_right" data-icon-variant="28-outline"></li>
+		<li data-icon-new="arrow_right" data-icon-variant="32-outline"></li>
+		<li data-icon-new="arrow_right" data-icon-variant="40-outline"></li>
+		<li data-icon-new="arrow_right" data-icon-variant="48-outline"></li>
+		<li data-icon-new="arrow_right" data-icon-variant="64-outline"></li>
+	</ol>
+	<ol>
+		<li data-icon-new="plus" data-icon-variant="10-outline"></li>
+		<li data-icon-new="plus" data-icon-variant="12-outline"></li>
+		<li data-icon-new="plus" data-icon-variant="14-outline"></li>
+		<li data-icon-new="plus" data-icon-variant="16-outline"></li>
+		<li data-icon-new="plus" data-icon-variant="20-outline"></li>
+		<li data-icon-new="plus" data-icon-variant="24-outline"></li>
+		<li data-icon-new="plus" data-icon-variant="28-outline"></li>
+		<li data-icon-new="plus" data-icon-variant="32-outline"></li>
+		<li data-icon-new="plus" data-icon-variant="40-outline"></li>
+		<li data-icon-new="plus" data-icon-variant="48-outline"></li>
+		<li data-icon-new="plus" data-icon-variant="64-outline"></li>
+	</ol>
+	<ol>
+		<li data-icon-new="information" data-icon-variant="10-outline"></li>
+		<li data-icon-new="information" data-icon-variant="12-outline"></li>
+		<li data-icon-new="information" data-icon-variant="14-outline"></li>
+		<li data-icon-new="information" data-icon-variant="16-outline"></li>
+		<li data-icon-new="information" data-icon-variant="20-outline"></li>
+		<li data-icon-new="information" data-icon-variant="24-outline"></li>
+		<li data-icon-new="information" data-icon-variant="28-outline"></li>
+		<li data-icon-new="information" data-icon-variant="32-outline"></li>
+		<li data-icon-new="information" data-icon-variant="40-outline"></li>
+		<li data-icon-new="information" data-icon-variant="48-outline"></li>
+		<li data-icon-new="information" data-icon-variant="64-outline"></li>
+	</ol>
+	<ol>
+		<li data-icon-new="sepa" data-icon-variant="10-outline"></li>
+		<li data-icon-new="sepa" data-icon-variant="12-outline"></li>
+		<li data-icon-new="sepa" data-icon-variant="14-outline"></li>
+		<li data-icon-new="sepa" data-icon-variant="16-outline"></li>
+		<li data-icon-new="sepa" data-icon-variant="20-outline"></li>
+		<li data-icon-new="sepa" data-icon-variant="24-outline"></li>
+		<li data-icon-new="sepa" data-icon-variant="28-outline"></li>
+		<li data-icon-new="sepa" data-icon-variant="32-outline"></li>
+		<li data-icon-new="sepa" data-icon-variant="40-outline"></li>
+		<li data-icon-new="sepa" data-icon-variant="48-outline"></li>
+		<li data-icon-new="sepa" data-icon-variant="64-outline"></li>
+	</ol>
 	<h2>New icon font with ligatures, current stroke algorithm: <span class="currentStroke"></span></h2>
 	<ul class="icons">
 		<li data-icon="account" data-icon-type="outline"></li>
@@ -134,9 +530,11 @@
 	</ul>
 	<h3>Benefits</h3>
 	<ul>
-		<li>Referencing doesn't need a mapping like when using glyphs, that additionally needs to get in sync in between solid and outline</li>
+		<li>Referencing doesn't need a mapping like when using glyphs, that additionally needs to get in sync in between
+			solid and outline</li>
 		<li>We could set the icons stroke by <code>text-stroke</code> from the outside</li>
-		<li>Instead of using SVGs, referencing these icons assets (fonts vs. SVGs) is much simpler in all of our usecases</li>
+		<li>Instead of using SVGs, referencing these icons assets (fonts vs. SVGs) is much simpler in all of our
+			usecases</li>
 	</ul>
 	<h2>Illustrator</h2>
 	<ol>
