fix: minor typos and wrong marking

--- a/radio-checkbox-screenreader-accessability/index.html
+++ b/radio-checkbox-screenreader-accessability/index.html
@@ -42,7 +42,7 @@
                 <div class="db-divider"></div>
             </li>
             <li>
-                <strong>Using "aria-label"</strong>
+                <strong>Using <code>aria-label</code></strong>
             </li>
             <li>
                 <a class="db-link" href="pages/aria-label-nested-radio-buttons.html" data-content="internal">
@@ -58,7 +58,7 @@
                 <div class="db-divider"></div>
             </li>
             <li>
-                <strong>Using "aria-labelled-by"</strong>
+                <strong>Using <code>aria-labelledby</code></strong>
             </li>
             <li>
                 <a class="db-link" href="pages/aria-labelledby-nested-radio-buttons.html" data-content="internal">
