--- a/radio-checkbox-screenreader-accessability/pages/aria-label-nested-radio-buttons.html
+++ b/radio-checkbox-screenreader-accessability/pages/aria-label-nested-radio-buttons.html
@@ -11,7 +11,7 @@
 <body class="db-ui-expressive">
 <header class="centered">
     <h1>test(a11y)</h1>
-    <p>Using <strong>aria-label</strong> at radio buttons: <i>label > input</i></p>
+    <p>Using <code>aria-label</code> at radio buttons: <i>label > input</i></p>
 </header>
 
 <div class="db-divider"></div>
