--- a/radio-checkbox-screenreader-accessability/pages/aria-labelledby-siblings-radio-buttons.html
+++ b/radio-checkbox-screenreader-accessability/pages/aria-labelledby-siblings-radio-buttons.html
@@ -11,7 +11,7 @@
 <body class="db-ui-expressive">
 <header class="centered">
     <h1>test(a11y)</h1>
-    <p>Using <strong>aria-labelled-by</strong> at radio buttons: <i>input + label</i></p>
+    <p>Using <code>aria-labelledby</code> at radio buttons: <i>input + label</i></p>
     <span class="db-infotext" data-variant="warning">Styling is broken and needs to be corrected!</span>
 </header>
 
