feat: added regular constellation

--- a/radio-checkbox-screenreader-accessability/index.html
+++ b/radio-checkbox-screenreader-accessability/index.html
@@ -70,6 +70,17 @@
                     Radio Buttons: <i>input + label</i>
                 </a>
             </li>
+            <li>
+                <div class="db-divider"></div>
+            </li>
+            <li>
+                <strong>Regular sibling</strong>
+            </li>
+            <li>
+                <a class="db-link" href="pages/siblings-radio-buttons.html" data-content="internal">
+                    Regular sibling for Radio Buttons: <i>input + label</i>
+                </a>
+            </li>
         </ul>
     </nav>
 </main>
