refactor: stable renaming

--- a/radio-checkbox-screenreader-accessibility/index.html
+++ b/radio-checkbox-screenreader-accessibility/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test(a11y)</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-    <link rel="stylesheet" href="/styles/db-ui-42-absolute.css">
+    <link rel="stylesheet" href="/styles/absolute.css">
     <link rel="stylesheet" href="/styles/main.css">
 </head>
-<body class="db-ui-regular">
+<body class="db-ux-regular">
 <header class="centered">
     <h1>test(a11y)</h1>
     <p><strong>radio-buttons & checkboxes</strong></p>
     <p>
         Label is being announced twice for Radio and Checkbox elements.
-        <a class="db-link" data-content="external" target="_blank" href="https://github.com/db-ui/mono/issues/2037">
+        <a class="db-link" data-content="external" target="_blank" href="https://github.com/db-ux-design-system/core-web/issues/2037">
             Github Issue
         </a>
     </p>
