--- a/radio-checkbox-screenreader-accessibility/pages/status-quo-radio-buttons.html
+++ b/radio-checkbox-screenreader-accessibility/pages/status-quo-radio-buttons.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test(a11y) - Status Quo: checkboxes</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-    <link rel="stylesheet" href="/styles/db-ui-42-absolute.css">
+    <link rel="stylesheet" href="/styles/absolute.css">
     <link rel="stylesheet" href="/styles/main.css">
 </head>
-<body class="db-ui-expressive">
+<body class="db-ux-expressive">
 <header class="centered">
     <h1>test(a11y)</h1>
     <p>Status Quo: radio buttons</p>
